// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application-outcome GET /change shouldrender the applicationOutcome change page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What was the application decision?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="application-outcome" name="application-outcome"
                            type="radio" value="granted">
                            <label class="govuk-label govuk-radios__label" for="application-outcome">Granted</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="application-outcome-2" name="application-outcome"
                            type="radio" value="refused">
                            <label class="govuk-label govuk-radios__label" for="application-outcome-2">Refused</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="application-outcome-3" name="application-outcome"
                            type="radio" value="not_received">
                            <label class="govuk-label govuk-radios__label" for="application-outcome-3">Not received</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`application-outcome POST /change should re-render applicationOutcome change page if data is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#application-outcome">Select one of the options</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">What was the application decision?</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="application-outcome" name="application-outcome"
                            type="radio" value="granted">
                            <label class="govuk-label govuk-radios__label" for="application-outcome">Granted</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="application-outcome-2" name="application-outcome"
                            type="radio" value="refused">
                            <label class="govuk-label govuk-radios__label" for="application-outcome-2">Refused</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="application-outcome-3" name="application-outcome"
                            type="radio" value="not_received">
                            <label class="govuk-label govuk-radios__label" for="application-outcome-3">Not received</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
